--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@ footer {
   <div class="emoji">🎉✨🎨</div>
   <h1>Khmer Unicode 2.0.1 for window</h1>
   <p>Install Khmer Unicode easily on your computer</p>
-  <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1HoRgKGxJvOynfHxeI7yS309kwrRHr2rt" download>
-    ⬇ Download Now
-  </a>
+  <a class="download-btn"
+   href="https://drive.google.com/uc?export=download&id=1HoRgKGxJvOynfHxeI7yS309kwrRHr2rt"
+   download
+   target="_blank">
+   ⬇ Download Now
+</a>
+
   <footer>Made with ❤️ for everyone</footer>
 </body>
 </html>
